--- a/buildpacks/java-maven/buildpack.toml
+++ b/buildpacks/java-maven/buildpack.toml
@@ -3,8 +3,8 @@ api = "0.2"
 
 # Buildpack ID and metadata
 [buildpack]
-id = "samples/java-maven"
-version = "0.0.1"
+id = "my-samples/java-maven"
+version = "0.0.2"
 name = "Sample Java Maven Buildpack"
 homepage = "https://github.com/buildpacks/samples/tree/main/buildpacks/java-maven"
 
